<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/pickYourPet" android:gravity="center"
            android:paddingTop="5dp" android:paddingBottom="5dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"/>


    <ImageButton android:id="@+id/pet_1" android:layout_width="180dp" android:layout_height="180dp"
                 android:src="@drawable/deer"
                 android:scaleType="centerCrop"
                 android:padding="5dp"
                 android:background="@drawable/border"
                 app:layout_constraintTop_toBottomOf="@id/pet_3" app:layout_constraintLeft_toRightOf="@id/pet_2"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:maxHeight="180dp"
                 android:maxWidth="180dp"/>
    <ImageButton android:id="@+id/pet_2" android:layout_width="180dp" android:layout_height="180dp"
                 android:src="@drawable/fox" android:scaleType="centerCrop"
                 android:padding="5dp"

                 app:layout_constraintTop_toBottomOf="@id/pet_4"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <ImageButton android:id="@+id/pet_3" android:layout_width="180dp" android:layout_height="180dp"
                 android:src="@drawable/owl" android:scaleType="centerCrop"
                 android:padding="5dp"

                 app:layout_constraintLeft_toRightOf="@id/pet_4"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/title"/>
    <ImageButton android:id="@+id/pet_4" android:layout_width="180dp" android:layout_height="180dp"
                 android:src="@drawable/wolf" android:scaleType="centerCrop"
                 android:padding="5dp"

                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
            android:text="@string/pet_name_prompt"
            android:layout_width="120dp"
            android:layout_height="37dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp" android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/pet_2"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/pet_name"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/pet_1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/navigation_finish"
            android:id="@+id/finish_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>